# roman-numerals

./: .flake8  .gitignore  README.md  mypy.ini  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  test-requirements.txt
notebooks/: exploring-roman-class.ipynb
roman/: __init__.py  exceptions.py  roman.py
scripts/: __init__.py  enums.py  exceptions.py  roman.py  utils.py
tests/: test_roman.py
