[metadata]
name = roman
description = Roman numerals class
author = Bogdan Kandra
license = GNU General Public License
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages =
    roman
install_requires =
    numpy==1.22.3
python_requires = >=3.6
package_dir =
    =roman-numerals
zip_safe = False
include_package_data = True

[options.extras_require] # These are optional dependencies, only installed if needed
testing =
    flake8==4.0.1
    tox==3.24.5
    pytest==7.1.1
    pytest-cov==3.0.0
    mypy==0.941

[options.package_data]
roman = py.typed # Indicates that the roman package is type-hinted

[flake8]
max-line-length = 120